# kraken

./: .ghci  .gitmodules  .travis.yml  LICENSE  README.md  default.nix  kraken-web.conf.example  kraken.cabal  kraken.conf.example  test_installation.sh
driver/: Main.hs
examples/: Example.hs  RestExample.hs  example.hs
kraken/: default.nix  kraken.cabal
kraken-daemon/: default.nix  kraken-daemon.cabal
kraken-daemon/src/Kraken/: Daemon.hs
kraken-daemon/src/Kraken/Daemon/: Internal.hs
kraken-web/: default.nix  kraken-web.cabal
kraken-web/driver/: Web.hs
kraken-web/src/Kraken/Web/: Dot.hs
kraken-web/test/Kraken/Web/: DotSpec.hs
kraken/driver/: Daemon.hs
kraken/src/Kraken/: Graph.hs  Run.hs  Util.hs
kraken/test/Kraken/: ConfigSpec.hs  RunSpec.hs  StoreSpec.hs
kraken/test/Test/Hspec/: Checkers.hs
src/: Kraken.hs
src/Kraken/: ActionM.hs  Config.hs  Daemon.hs  Dot.hs  Graph.hs  Orphans.hs  Run.hs  Store.hs  Target.hs  TargetGraph.hs  TargetM.hs  Util.hs  Web.hs
src/Kraken/Daemon/: Internal.hs
src/Kraken/Web/: Client.hs  Config.hs  TargetGraph.hs  Utils.hs
src/Network/Wai/: TypedRest.hs
src/Network/Wai/Handler/Warp/: Run.hs
static/: index.html
static/css/: style.css
static/js/: kraken-web-client.js
test/: ExampleSpec.hs  KrakenSpec.hs  doctests.hs
test/Kraken/: ActionMSpec.hs  ConfigSpec.hs  DaemonSpec.hs  DotSpec.hs  GraphSpec.hs  RunSpec.hs  StoreSpec.hs  TargetMSpec.hs  WebSpec.hs
test/Kraken/Web/: ConfigSpec.hs
