name:             kraken
version:          0.2.0.0
author:           Sönke Hahn
maintainer:       soenke.hahn@zalora.com
copyright:        Zalora South East Asia Pte Ltd
license:          BSD3
license-file:     LICENSE
category:         Database
build-type:       Simple
cabal-version:    >= 1.10

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , aeson
    , bytestring
    , configurator
    , containers
    , directory
    , either
    , enclosed-exceptions
    , graph-wrapper
    , http-client
    , http-types
    , interpolate
    , mtl
    , optparse-applicative >= 0.11
    , process
    , safe
    , servant >= 0.2
    , string-conversions
    , text
    , transformers
    , wai
    , wai-extra
    , warp
    , yaml
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
  exposed-modules:
      Kraken
      Kraken.ActionM
      Kraken.Config
      Kraken.Daemon
      Kraken.Dot
      Kraken.Graph
      Kraken.Run
      Kraken.Store
      Kraken.Util
      Kraken.Web
      Kraken.Web.Config
      Kraken.Web.TargetGraph
      Network.Wai.Handler.Warp.Run
  default-language:
      Haskell2010
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded

executable kraken-web
  main-is: Kraken/Web/Main.hs
  hs-source-dirs:
    src
  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , directory
    , either
    , enclosed-exceptions
    , graph-wrapper
    , http-client
    , http-types
    , interpolate
    , mtl
    , optparse-applicative >= 0.11
    , process
    , safe
    , servant
    , string-conversions
    , transformers
    , wai
    , wai-extra
    , warp
    , yaml
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
  default-language:
      Haskell2010
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded

test-suite krakenspec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded
      -O0
  default-language:
      Haskell2010
  hs-source-dirs:
      test, examples
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , aeson
    , checkers
    , configurator
    , containers
    , deepseq
    , directory
    , either
    , graph-wrapper
    , hspec2
    , hspec-wai >= 0.5
    , http-client
    , http-types
    , HUnit
    , interpolate
    , kraken
    , process
    , QuickCheck >= 2.7
    , quickcheck-instances
    , safe
    , servant
    , silently
    , string-conversions
    , temporary
    , transformers
    , wai
    , wai-extra
    , warp
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
