name:             kraken
version:          0.2.0.0
author:           Sönke Hahn
maintainer:       soenke.hahn@zalora.com
copyright:        (c) 2014 Zalora South East Asia Pte Ltd
license:          BSD3
license-file:     LICENSE
category:         Database
build-type:       Simple
cabal-version:    >= 1.10

data-files:
    static/*.html
  , static/js/*.js
  , static/js/vendor/*.min.js
  , static/css/*.css


flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , aeson
    , bytestring
    , configurator
    , containers
    , directory
    , either == 4.3.*
    , enclosed-exceptions
    , filepath
    , graph-wrapper
    , http-client
    , http-types
    , interpolate
    , mtl
    , optparse-applicative >= 0.11
    , process
    , safe
    , servant
    , servant-server
    , servant-docs
    , servant-client
    , servant-jquery
    , string-conversions
    , system-filepath
    , text
    , transformers
    , wai
    , wai-app-static
    , warp
    , yaml
    , logging-facade
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
  exposed-modules:
      Kraken
      Kraken.ActionM
      Kraken.Config
      Kraken.Daemon
      Kraken.Daemon.Internal
      Kraken.Dot
      Kraken.Graph
      Kraken.Orphans
      Kraken.Run
      Kraken.Store
      Kraken.TargetGraph
      Kraken.Util
      Kraken.Web
      Kraken.Web.Client
      Kraken.Web.Config
      Network.Wai.Handler.Warp.Run
  other-modules:
      Paths_kraken
  default-language:
      Haskell2010
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded

executable kraken-web
  main-is: driver/Main.hs
  build-depends:
      base == 4.*
    , kraken
  default-language:
      Haskell2010
  ghc-options:
      -Wall -threaded

executable kraken-example
  main-is: examples/Example.hs
  build-depends:
      base == 4.*
    , kraken
    , directory
    , transformers
  default-language:
      Haskell2010
  ghc-options:
      -Wall -threaded -main-is Example

test-suite krakenspec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded
  default-language:
      Haskell2010
  hs-source-dirs:
      test, examples
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , aeson
    , checkers
    , configurator
    , containers
    , deepseq
    , directory
    , either
    , graph-wrapper
    , hspec == 2.*
    , hspec-wai >= 0.6
    , http-client
    , http-types
    , HUnit
    , interpolate
    , kraken
    , process
    , QuickCheck >= 2.7
    , quickcheck-instances
    , safe
    , servant
    , servant-server
    , servant-docs
    , servant-client
    , silently
    , string-conversions
    , temporary
    , transformers
    , wai
    , wai-extra
    , warp
    , logging-facade
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
