name:             kraken
version:          0.2.0.0
author:           Sönke Hahn
maintainer:       soenke.hahn@zalora.com
copyright:        Zalora South East Asia Pte Ltd
license:          BSD3
license-file:     LICENSE
category:         Database
build-type:       Simple
cabal-version:    >= 1.10
description:
    This package provides the means of defining and running `Target`s.
    .
    See the accompanying README for more info.

extra-source-files:
  default.nix


flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , aeson
    , bytestring
    , configurator
    , containers
    , directory
    , either == 4.3.*
    , enclosed-exceptions
    , filepath
    , graph-wrapper
    , http-client
    , http-types
    , interpolate
    , mtl
    , optparse-applicative >= 0.11
    , process
    , safe
    , servant
    , servant-server
    , servant-client
    , servant-docs
    , string-conversions
    , system-filepath
    , text
    , transformers
    , yaml
    , wai
    , warp
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
  exposed-modules:
      Kraken
      Kraken.ActionM
      Kraken.Config
      Kraken.Daemon
      Kraken.Dot
      Kraken.Graph
      Kraken.Run
      Kraken.Store
      Kraken.Util
      Paths_kraken
  default-language:
      Haskell2010
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded

test-suite krakenspec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded
      -O0
  default-language:
      Haskell2010
  hs-source-dirs:
      test, examples
  main-is:
      Spec.hs
  other-modules:
    ExampleSpec
    Spec
    Test.Hspec.Checkers
    Kraken.ActionMSpec
    Kraken.StoreSpec
    Kraken.GraphSpec
    Kraken.DaemonSpec
    Kraken.DotSpec
    Kraken.RunSpec
    Kraken.ConfigSpec
    KrakenSpec
  build-depends:
      base == 4.*
    , aeson
    , checkers
    , configurator
    , containers
    , deepseq
    , directory
    , either
    , graph-wrapper
    , hspec
    , hspec-wai >= 0.5
    , http-client
    , http-types
    , HUnit
    , interpolate
    , kraken
    , process
    , QuickCheck >= 2.7
    , quickcheck-instances
    , safe
    , servant
    , servant-server
    , servant-docs
    , servant-client
    , silently
    , string-conversions
    , temporary
    , transformers
    , wai
    , wai-extra
    , warp
  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6
